Fix alignment issue

--- a/src/MuiOverride.css
+++ b/src/MuiOverride.css
@@ -103,6 +103,7 @@
   }
   .MuiTab-root {
     padding:6px 8px !important;
+    max-width: 400px !important;
   }
   .MuiTab-labelIcon{
     min-height: 64px !important;
